# calculator

./: README.md  main.py  main_calculator.py  planner.txt  pyproject.toml  requirements.txt
static/: styles-cost.css  styles-index.css  styles-new-cost.css  styles-new.css  styles-return-shopee-profit.css  styles-shopee-profit.css  styles-used.css
templates/: index.html  new.html  return-cost.html  return-new-cost.html  return_shopee_profit.html  shopee_profit.html  used.html
