[tool.poetry]
name = "percent-calculator"
version = "0.1.0"
description = ""
authors = ["Makoto <nakasimafabio@gmail.com>"]
readme = "README.md"
packages = [{include = "percent_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
